apps/mindwtr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mindwtr
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`tasks.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
      services:
        - name: mindwtr
          port: 80
          namespace: mindwtr
